--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,11 @@
         		<artifactId>mongodb-driver-sync</artifactId>
         	<version>3.8.2</version>
    	 	</dependency>
+   	 	<dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>mail</artifactId>
+            <version>1.5.0-b01</version>
+        </dependency>
     </dependencies>
 
 <profiles>
